<resources>
    <string name="app_name">Rebator</string>
    <string name="title_akusisi">Akusisi</string>
    <string name="title_inkubasi">inkubasi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="label_if_dont_have_account"><![CDATA[Jika belum memiliki akun <p style="color:#0000FF">daftar disini!</p>]]></string>

    <string name="title_onboarding_first">Kerjsama</string>
    <string name="desc_onboarding_first">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>

    <string name="title_onboarding_second">Kerjasama</string>
    <string name="desc_onboarding_second">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>

    <string name="title_onboarding_third">Kerjsama</string>
    <string name="desc_onboarding_third">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</string>

    <string name="register">Register</string>
    <string name="label_if_have_account"><![CDATA[Jika sudah memiliki akun <p style="color:#0000FF">masuk disini!</p>]]></string>
    <string name="photo_profile">Foto Profil</string>
    <string name="tips_photo_profile">Pastikan foto profil terlihat secara jelas</string>
    <string name="save">Simpan</string>
    <string name="user_information">Informasi User</string>
    <string name="name">Nama</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="position">Posisi</string>

    <string name="seller_information">Informasi Penjual</string>
    <string name="office_name">Nama Toko</string>
    <string name="tiktok_account_id">ID Tiktok</string>

    <string name="province">Provinsi</string>
    <string name="city">Kota</string>
    <string name="district">Kecamatan</string>
    <string name="address">Alamat</string>

    <string name="office_photo">Foto Toko</string>
    <string name="tips_office_photo">Pastikan foto toko terlihat jelas. Karena foto toko akan mempermudah Team Inkubasi untuk menemukan toko.</string>

    <string name="contact">Kontak</string>
    <string name="seller_name">Nama Penjual</string>
    <string name="seller_phone_number">Nomor Telepon Penjual</string>
    <string name="gender">Jenis Kelamin</string>

    <string name="about_us">About Us</string>
    <string name="desc_about_us"><![CDATA[Aplikasi ini dibangun dan diciptakan sebagai aplikasi yang akan membantu pihak Akusisi untuk dapat mengoptimalkan pekerjaannya.<br><br>&copy;Redveloper]]></string>

    <string name="search_by_tiktok">Cari berdasarkan TikTok</string>

</resources>