<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.redveloper.rebator.ui.editprofile.EditProfileFragment">

    <include
        android:id="@+id/layout_appbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/layout_appbar"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user"
        android:src="@color/pink"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_appbar"
        app:civ_border_width="1dp"
        app:civ_border_color="@color/pink"
        app:civ_circle_background_color="@color/blue_50"
        android:layout_width="90dp"
        android:layout_height="90dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        style="@style/EditText.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/img_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:focusable="false"
            android:enabled="false"
            android:id="@+id/edt_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        style="@style/EditText.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layout_edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_phone_number"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/phone_number"
        style="@style/EditText.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layout_edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_phone_number"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_position"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/position"
        style="@style/EditText.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layout_edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:enabled="false"
            android:focusable="false"
            android:id="@+id/edt_position"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:id="@+id/gd_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:background="@drawable/selector_button"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_edt_position"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/gd_vertical"
        android:layout_width="0dp"
        android:layout_height="50dp"/>

    <ImageView
        android:translationX="-90dp"
        android:translationY="220dp"
        android:alpha="0.7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_man_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:visibility="gone"
        android:indeterminateTint="@color/pink"
        android:id="@+id/progress_bar"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>