<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addseller.information.SellerInformationFragment">

    <include
        android:id="@+id/layout_appbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/layout_akusisi_appbar"/>

    <TextView
        android:layout_marginTop="50dp"
        android:id="@+id/tv_seller_information"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_appbar"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:text="@string/seller_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_akusisi"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/akusisi"
        style="@style/EditText.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/tv_seller_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:focusable="false"
            android:enabled="false"
            android:id="@+id/edt_akusisi"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_office_name"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/office_name"
        style="@style/EditText.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layout_edt_akusisi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_office_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_edt_tiktok_id"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/tiktok_account_id"
        style="@style/EditText.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/layout_edt_office_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_tiktok_id"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        app:layout_constraintGuide_percent="0.5"
        android:id="@+id/gd_vertical"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:background="@drawable/selector_button"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout_edt_tiktok_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/gd_vertical"
        android:layout_width="0dp"
        android:layout_height="50dp"/>

    <ProgressBar
        android:visibility="gone"
        android:indeterminateTint="@color/pink"
        android:id="@+id/progress_bar"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>