<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.camerauser.RegisterCameraUserFragment">

    <include
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/layout_appbar"/>

    <TextView
        android:id="@+id/tv_photo_profile"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        android:text="@string/photo_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/img_photo_profile"
        android:scaleType="centerInside"
        android:src="@drawable/ic_image"
        android:background="@drawable/bg_image_choose"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_photo_profile"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_tips_photo_profile"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_thin"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/img_photo_profile"
        android:text="@string/tips_photo_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:id="@+id/gd_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_save"
        android:textAllCaps="false"
        android:text="@string/save"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tips_photo_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/gd_vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:visibility="gone"
        android:indeterminateTint="@color/pink"
        android:id="@+id/progress_bar"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>